<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gurita Resto Apps</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="alert">Koneksi Terputus!!</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <!--bagian quantity order -->
    <string name="Produk_title">Produk List</string>

    <string name="delete_confirm">Kembali,tanpa data order??</string>
    <string name="delete_msg">Data Order hilang jika anda kembali!!</string>
    <string name="ya">Hapus</string>
    <string name="kirim">Kirim</string>
    <string name="tidak">Cancel</string>
    <!--bagian informasi detail kategori-->

    <string name="info_detail_sub">You can choose seller list name, for filter menu in this category, </string>
    <string name="feedback">TERIMA KASIH TELAH MELUANGKAN WAKTU UNTUK MEMBERIKAN FEEDBACK. KAMI AKAN MEMPROSES FEEDBACK ANDA SECEPATNYA.</string>

    <!--bagian validate form-->
    <string name="error_invalid_password">Password tidak valid</string>
    <string name="error">Jaringan internet terputus! , \npastikan data internet anda aktif.</string>
    <!--gcm id-->
    <string name="gcm_id">745372770705</string>

    <!-- bagian button intro -->
    <string name="skip_button">SKIP</string>
    <string name="done_button">SELESAI</string>

    <!-- bagian Facebook id disini-->
    <string name="id_facebook">1619625128347156</string>

    <string name="additem">Tambah</string>
    <string name="deleteItem">Hapus</string>

    <string name="setting_title">Setting</string>

    <!--bagian layout cartlist-->
    <string name="des_alamat">* Untuk mempercepat pengiriman pesanan, Silakan ubah alamat anda jika tidak akurat.</string>
    <string name="des_telp">Masukan no hp yg bisa di hubungi.</string>
    <!-- Drawer Menu items -->
    <string-array name="nav_drawer_items">
        <item>Halaman Utama</item>
        <item>Semua Produk</item>
        <item>Daftar Order</item>
        <item>Konfirmasi Form</item>
        <item>Info/Lacak Resi</item>
        <item>Tentang App</item>
        <item>Share Aplikasi</item>
        <item>Informasi App</item>
        <item>Logout</item>
    </string-array>

    <!-- Sliding Menu item icons -->
    <string-array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/product</item>
        <item>@drawable/shop</item>
        <item>@drawable/checklist</item>
        <item>@drawable/map</item>
        <item>@drawable/info</item>
        <item>@drawable/ic_share</item>
        <item>@drawable/about</item>
        <item>@drawable/exit</item>
    </string-array>

    <!--bagian title toolbar-->
    <string name="add_produk">SAVE</string>
    <string name="checkout">CHECKOUT</string>
    <string name="price">PRICE PRODUCT</string>
    <string name="cat">CATEGORY</string>
    <string name="hitMenu">Insert your menu name</string>
    <string name="hitPrice">Insert price menu</string>
    <string name="nameMenu">PRODUCT NAME</string>
    <string name="rdReady">READY ORDER</string>
    <string name="rdClose">CLOSED</string>
    <string name="status">Status</string>

    <!--bagian intro-->
    <string name="welcome">Selamat Datang di \n Gurita Resto</string>
    <string name="intro3">Jadilah Langganan dan Nikmati keseruaan mu.\nPilihan semua barang murah dalam gengaman anda, dan langsung kami antar di rumah anda.</string>
    <string name="intro2">Keseruan menemukan transaksi murah bermutu langsung dari rumah sendiri.\n OJEK - TAXI -MAKANAN - MINUMAN - BENGKEL</string>
    <string name="intro1">Singkat waktu, Semua yang anda butuhkan telah kami siapkan dan kami antar.\nMilikilah waktu dan kemudahan dengan Aplikasi Gurita Resto.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
